# GLFWSkeleton

./: .gitignore  CMakeLists.txt
src/: AppState.cpp  AppState.h  GLHeader.h  Main.cpp  Window.cpp  Window.h
src/Common/: File.h  GLHeader.h  JsonSerialization.cpp  JsonSerialization.h  Time.h
src/Widgets/: Grid.cpp  Grid.h  ImageWidget.cpp  ImageWidget.h  Widget.cpp  Widget.h  Widget3D.cpp  Widget3D.h
